module(
    name = "cartpole",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "pico-sdk", version = "2.2.2-develop.bcr.20260105-1cc19a21")
bazel_dep(name = "picotool", version = "2.2.0")

register_toolchains(
    "@pico-sdk//bazel/toolchain:linux-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:mac-aarch64-rp2350",
)
